hphp/hack/test/typecheck/immutable_binding/immutable_foreach_mutation.php.exp
File "immutable_foreach_mutation.php", line 6, characters 5-5:
Let variables are immutable. Using let variable k in write context is not allowed. (Typing[4244])
