hphp/hack/test/typecheck/immutable_binding/immutable_foreach_mutation.php
<?hh // experimental

function foo(Map<int, string> $map, string $prefix): string {
  $out = '';
  foreach ($map as k => v) {
    k .= ':';
    v .= ' ';
    $out .= k.v;
  }
  return $out;
}
